--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ git+git://github.com/allenai/allennlp.git@d78daa44cc90b3ea9090fe6c24e788ebafe844
 # CoNLL-U format parsing
 conllu==0.11
 
+# STREUSLE format parsing
+streusle==4.1.post1
+
 # Tree utilities
 nltk
 
